grammar.js
        source_file: $ =>
            repeat(
                choice(
                    $.module_declaration,
                    $.script_declaration,
                    $.address_block,
                    $.spec_block
                )
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Address blocks (legacy syntax)
        // ═══════════════════════════════════════════════════════════════════════════

        module_declaration: $ =>
            seq(
                optional($.attributes),
                'module',
                field('name', choice($.module_identity, $.identifier)),
                field('body', $.module_body)
            ),

        module_identity: $ =>
            seq(field('address', $._leading_name_access), '::', field('module', $.identifier)),

        module_body: $ => seq('{', repeat($._module_member), '}'),

        _module_member: $ =>
            choice(
                $.use_declaration,
                $.friend_declaration,
                $.constant_declaration,
                $.struct_declaration,
                $.enum_declaration,
                $.function_declaration,
                $.spec_block
            ),

        // ═══════════════════════════════════════════════════════════════════════════
        // Script declaration
        // ═══════════════════════════════════════════════════════════════════════════

        function_declaration: $ =>
            choice($._native_function_declaration, $._regular_function_declaration),

        _native_function_declaration: $ =>
            seq(
                optional($.attributes),
                repeat($._modifier),
                'native',
                repeat($._modifier),
                'fun',
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                field('parameters', $.function_parameters),
                optional(seq(':', field('return_type', $._type))),
                optional(field('acquires', $.acquires_clause)),
                ';'
            ),

        _regular_function_declaration: $ =>
            seq(
                optional($.attributes),
                repeat($._modifier),
                'fun',
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                field('parameters', $.function_parameters),
                optional(seq(':', field('return_type', $._type))),
                optional(field('acquires', $.acquires_clause)),
                field('body', $.block)
            ),

        function_parameters: $ => seq('(', commaSep($.function_parameter), ')'),

        function_parameter: $ => seq(field('name', $.identifier), ':', field('type', $._type)),

        type_arguments: $ => seq('<', commaSep1($._type), '>'),

        // ═══════════════════════════════════════════════════════════════════════════
        // Types
        // ═══════════════════════════════════════════════════════════════════════════

        _type: $ =>
            choice(
                $.primitive_type,
                $.ref_type,
                $.tuple_type,
                $.apply_type,
                $.function_type,
                $.unit_type
            ),

        primitive_type: _ =>
            choice(
                'u8',
                'u16',
                'u32',
                'u64',
                'u128',
                'u256',
                'bool',
                'address',
                'signer',
                // Signed integers (Move 2.3)
                'i8',
                'i16',
                'i32',
                'i64',
                'i128',
                'i256'
            ),

        apply_type: $ => prec.left(seq($.name_access_chain, optional($.type_arguments))),

        // Function type: |u64, bool| u64 has copy + drop
        // Also handles empty params: || u64
        _leading_name_access: $ =>
            choice(
                $.identifier,
                $.numerical_address,
                // Contextual keywords that are also valid identifiers in expression context
                alias('vector', $.identifier), // vector[..] literal, but also vector::length()
                alias('exists', $.identifier), // spec quantifier, but also exists<T>(addr) builtin
                alias('forall', $.identifier), // spec quantifier, but may appear as name
                alias('choose', $.identifier) // spec quantifier, but may appear as name
            ),

        numerical_address: _ => /0x[a-fA-F0-9]+/,

        name_access_chain: $ =>
            prec.left(seq($._leading_name_access, repeat(seq('::', $.identifier)))),

        // module_name is just an identifier - use $.identifier directly where needed

        // ═══════════════════════════════════════════════════════════════════════════
        // Literals
        // ═══════════════════════════════════════════════════════════════════════════

        address_literal: $ => seq('@', choice($._leading_name_access, $.num_literal)),

        num_literal: _ =>
            token(
                choice(
                    // Decimal with optional type suffix
                    /[0-9][0-9_]*(u8|u16|u32|u64|u128|u256|i8|i16|i32|i64|i128|i256)?/,
                    // Hex with optional type suffix
                    /0[xX][a-fA-F0-9][a-fA-F0-9_]*(u8|u16|u32|u64|u128|u256|i8|i16|i32|i64|i128|i256)?/
                )
            ),

        bool_literal: _ => choice('true', 'false'),

        byte_string_literal: _ =>
            token(seq('b"', repeat(choice(/\\[nrt0\\"]/, /\\x[0-9a-fA-F]{2}/, /[^\\"]/)), '"')),

        hex_string_literal: _ => token(seq('x"', /[0-9a-fA-F]*/, '"')),

        // ═══════════════════════════════════════════════════════════════════════════
        // Expressions
        // ═══════════════════════════════════════════════════════════════════════════

        _expression: $ =>
            choice(
                $.lambda_expression,
                $.if_expression,
                $.while_expression,
                $.loop_expression,
                $.for_expression,
                $.match_expression,
                $.return_expression,
                $.abort_expression,
                $.assign_expression,
                $._unary_expression,
                $.binary_expression,
                $.quantifier_expression
            ),

        // ─── Lambda ───────────────────────────────────────────────────────────────

        lambda_expression: $ =>
            prec.right(seq(field('parameters', $.lambda_parameters), field('body', $._expression))),

        lambda_parameters: $ => choice(seq('|', commaSep1($.lambda_parameter), '|'), '||'),

        lambda_parameter: $ =>
            seq(field('bind', $._bind), optional(seq(':', field('type', $._type)))),

        // ─── Control flow ─────────────────────────────────────────────────────────

        if_expression: $ =>
            prec.right(
                seq(
                    'if',
                    '(',
                    field('condition', $._expression),
                    ')',
                    field('consequence', $._expression),
                    optional(seq('else', field('alternative', $._expression)))
                )
            ),

        while_expression: $ =>
            seq(
                optional($.loop_label),
                'while',
                '(',
                field('condition', $._expression),
                ')',
                field('body', $._expression)
            ),

        for_expression: $ =>
            prec(
                1,
                seq(
                    'for',
                    '(',
                    field('iterator', $.identifier),
                    'in',
                    field('range', $.range_expression),
                    ')',
                    field('body', $._expression)
                )
            ),

        range_expression: $ =>
            prec(
                PREC.RANGE + 1,
                seq(field('lower', $._expression), '..', field('upper', $._expression))
            ),

        match_expression: $ =>
            seq('match', '(', field('subject', $._expression), ')', '{', repeat($.match_arm), '}'),

        match_arm: $ =>
            seq(
                field('pattern', $._match_pattern),
                optional(seq('if', '(', field('guard', $._expression), ')')),
                '=>',
                field('body', $._expression),
                optional(',')
            ),

        _match_pattern: $ =>
            choice(
                $.name_expression,
                $.struct_pattern,
                $.positional_pattern,
                $.or_pattern,
                '_',
                $._literal_value
            ),

        struct_pattern: $ =>
            seq(
                $.name_access_chain,
                optional($.type_arguments),
                '{',
                commaSep(choice($.field_pattern, '..')),
                '}'
            ),

        field_pattern: $ =>
            seq(field('field', $.identifier), optional(seq(':', field('bind', $._match_pattern)))),

        return_expression: $ => prec.right(seq('return', optional($._expression))),

        abort_expression: $ => prec.right(seq('abort', $._expression)),

        binary_expression: $ => {
            const table = [
                [PREC.IMPLIES, '==>'],
                [PREC.IFF, '<==>'],
                [PREC.OR, '||'],
                [PREC.AND, '&&'],
                [PREC.EQ, '=='],
                [PREC.EQ, '!='],
                [PREC.EQ, '<'],
                [PREC.EQ, '>'],
                [PREC.EQ, '<='],
                [PREC.EQ, '>='],
                [PREC.RANGE, '..'],
                [PREC.BITOR, '|'],
                [PREC.XOR, '^'],
                [PREC.BITAND, '&'],
                [PREC.SHIFT, '<<'],
                [PREC.SHIFT, '>>'],
                [PREC.ADD, '+'],
                [PREC.ADD, '-'],
                [PREC.MUL, '*'],
                [PREC.MUL, '/'],
                [PREC.MUL, '%'],
            ];

            return choice(
                ...table.map(([precedence, operator]) =>
                    prec.left(
                        precedence,
                        seq(
                            field('lhs', $._expression),
                            field('operator', operator),
                            field('rhs', $._expression)
                        )
                    )
                )
            );
        },

        // ─── Unary expressions ────────────────────────────────────────────────────

        _expression_term: $ =>
            choice(
                $.call_expression,
                $.macro_call_expression,
                $.indirect_call_expression,
                $.pack_expression,
                $.name_expression,
                $.generic_name_expression,
                $.dot_expression,
                $.method_call_with_type_args,
                $.index_expression,
                $.cast_expression,
                $.annotate_expression,
                $.is_expression,
                $.block,
                $.vector_expression,
                $._literal_value,
                $.unit_expression,
                $.parenthesized_expression,
                $.expression_list,
                $.break_expression,
                $.continue_expression,
                $.spec_block
            ),

        // Name expression: variable, path, or enum variant
        // Note: type_arguments are NOT on name_expression -- they live on
        // call_expression, pack_expression, dot_expression, vector_expression, etc.
        // This prevents `i < 10` from being mis-parsed as `i<10...>` (name with generic args).
        name_expression: $ => $.name_access_chain,

        // Generic name expression for spec globals: supply<CoinType>
        // Uses prec.dynamic(2) to prefer over comparison interpretation.
        call_expression: $ =>
            choice(
                prec.dynamic(
                    2,
                    seq(
                        field('function', $.name_access_chain),
                        field('type_arguments', $.type_arguments),
                        field('arguments', $.arg_list)
                    )
                ),
                prec(
                    PREC.CALL,
                    seq(field('function', $.name_access_chain), field('arguments', $.arg_list))
                )
            ),

        // Macro call: assert!(cond, code)
        // The macro name and ! are a single token to avoid ambiguity with NOT operator
        macro_call_expression: $ =>
            prec(
                PREC.CALL,
                seq(
                    field(
                        'macro',
                        alias(token(seq(/[a-zA-Z_][a-zA-Z0-9_]*/, '!')), $.macro_identifier)
                    ),
                    field('arguments', $.arg_list)
                )
            ),

        macro_identifier: _ => token(seq(/[a-zA-Z_][a-zA-Z0-9_]*/, '!')),

        // Struct/enum pack: Struct { field: value }, Struct<T> { field: value }
        pack_expression: $ =>
            choice(
                // With type arguments -- prec.dynamic(2) to prefer over comparison interpretation
                prec.dynamic(
                    2,
                    seq(
                        field('type', $.name_access_chain),
                        field('type_arguments', $.type_arguments),
                        '{',
                        commaSep($.field_initializer),
                        '}'
                    )
                ),
                // Without type arguments
                seq(
                    field('type', $.name_access_chain),
                    '{',
                    commaSep($.field_initializer),
                    '}'
                )
            ),

        field_initializer: $ =>
            seq(field('field', $.identifier), optional(seq(':', field('value', $._expression)))),

        // Dot expression: obj.field, obj.method(args), obj.0
        dot_expression: $ =>
            prec.left(
                PREC.FIELD,
                seq(
                    field('object', $._expression_term),
                    '.',
                    field('field', choice($.identifier, $.num_literal)),
                    optional(field('arguments', $.arg_list))
                )
            ),

        // Receiver-style method call with type arguments: obj.method<T>(args)
        // Consumes a dot_expression as its object, then extends with type_arguments + arg_list.
        // prec.dynamic(2) makes this win over the binary `<` interpretation when both parses succeed.
        method_call_with_type_args: $ =>
            prec.dynamic(
                2,
                seq(
                    $.dot_expression,
                    field('type_arguments', $.type_arguments),
                    field('arguments', $.arg_list)
                )
            ),

        // Indirect call: (expr)(args), (self.f)(num)
        cast_expression: $ =>
            prec.left(PREC.AS, seq(field('expr', $._expression), 'as', field('type', $._type))),

        // Type annotation: (expr : Type)
        vector_expression: $ =>
            prec(
                PREC.CALL + 1,
                seq(
                    alias('vector', $.identifier),
                    optional($.type_arguments),
                    '[',
                    commaSep($._expression),
                    ']'
                )
            ),

        // Parenthesized expression: (expr)
        parenthesized_expression: $ => seq('(', $._expression, ')'),

        // Tuple / grouped expression: (expr, expr)
        _bind_list: $ => choice($._bind, seq('(', commaSep($._bind), ')')),

        bind_var: $ => $.identifier,
