test/corpus/expressions.txt
================================================================================
Binary expressions
================================================================================

module 0x1::test {
    fun f() {
        let x = 1 + 2 * 3;
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (let_expression
            binds: (bind_var
              (identifier))
            value: (binary_expression
              lhs: (num_literal)
              rhs: (binary_expression
                lhs: (num_literal)
                rhs: (num_literal)))))))))

================================================================================
If expression
================================================================================

module 0x1::test {
    fun f(): u64 {
        if (x > 0) { 1 } else { 0 }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        return_type: (primitive_type)
        body: (block
          (if_expression
            condition: (binary_expression
              lhs: (name_expression
                (name_access_chain
                  (identifier)))
              rhs: (num_literal))
            consequence: (block
              (num_literal))
            alternative: (block
              (num_literal))))))))

================================================================================
Match expression
================================================================================

module 0x1::test {
    fun f(c: Color): u64 {
        match (c) {
            Color::Red => 1,
            Color::Custom { r, g, b } => 4,
            _ => 0,
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters
          (function_parameter
            name: (identifier)
            type: (apply_type
              (name_access_chain
                (identifier)))))
        return_type: (primitive_type)
        body: (block
          (match_expression
            subject: (name_expression
              (name_access_chain
                (identifier)))
            (match_arm
              pattern: (name_expression
                (name_access_chain
                  (identifier)
                  (identifier)))
              body: (num_literal))
            (match_arm
              pattern: (struct_pattern
                (name_access_chain
                  (identifier)
                  (identifier))
                (field_pattern
                  field: (identifier))
                (field_pattern
                  field: (identifier))
                (field_pattern
                  field: (identifier)))
              body: (num_literal))
            (match_arm
              body: (num_literal))))))))

================================================================================
For loop with range
================================================================================

module 0x1::test {
    fun f() {
        for (i in 0..10) {
        };
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (for_expression
            iterator: (identifier)
            range: (range_expression
              lower: (num_literal)
              upper: (num_literal))
            body: (block)))))))

================================================================================
Vector literal
================================================================================

module 0x1::test {
    fun f() {
        let v = vector[1, 2, 3];
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (let_expression
            binds: (bind_var
              (identifier))
            value: (vector_expression
              (identifier)
              (num_literal)
              (num_literal)
              (num_literal))))))))

================================================================================
Lambda expression
================================================================================

module 0x1::test {
    fun f() {
        let add_one = |x: u64| x + 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (let_expression
            binds: (bind_var
              (identifier))
            value: (lambda_expression
              parameters: (lambda_parameters
                (lambda_parameter
                  bind: (bind_var
                    (identifier))
                  type: (primitive_type)))
              body: (binary_expression
                lhs: (name_expression
                  (name_access_chain
                    (identifier)))
                rhs: (num_literal)))))))))

================================================================================
Macro call assert!
================================================================================

module 0x1::test {
    fun f() {
        assert!(x > 0, 1);
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (macro_call_expression
            macro: (macro_identifier)
            arguments: (arg_list
              (binary_expression
                lhs: (name_expression
                  (name_access_chain
                    (identifier)))
                rhs: (num_literal))
              (num_literal))))))))

================================================================================
Dot expression and method call
================================================================================

module 0x1::test {
    fun f() {
        let v = obj.field;
        obj.method(1);
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (let_expression
            binds: (bind_var
              (identifier))
            value: (dot_expression
              object: (name_expression
                (name_access_chain
                  (identifier)))
              field: (identifier)))
          (dot_expression
            object: (name_expression
              (name_access_chain
                (identifier)))
            field: (identifier)
            arguments: (arg_list
              (num_literal))))))))

================================================================================
Pack expression
================================================================================

module 0x1::test {
    fun f() {
        let c = Coin { value: 100 };
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (let_expression
            binds: (bind_var
              (identifier))
            value: (pack_expression
              type: (name_access_chain
                (identifier))
              (field_initializer
                field: (identifier)
                value: (num_literal)))))))))

================================================================================
Return and abort
================================================================================

module 0x1::test {
    fun f(): u64 {
        if (false) {
            abort 42
        };
        return 0
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        return_type: (primitive_type)
        body: (block
          (if_expression
            condition: (bool_literal)
            consequence: (block
              (abort_expression
                (num_literal))))
          (return_expression
            (num_literal)))))))

================================================================================
Type cast expression
================================================================================

module 0x1::test {
    fun f() {
        let x = (y as u64);
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (let_expression
            binds: (bind_var
              (identifier))
            value: (parenthesized_expression
              (cast_expression
                expr: (name_expression
                  (name_access_chain
                    (identifier)))
                type: (primitive_type)))))))))

================================================================================
Call with type arguments
================================================================================

module 0x1::test {
    fun f() {
        borrow_global<Coin>(addr);
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (call_expression
            function: (name_access_chain
              (identifier))
            type_arguments: (type_arguments
              (apply_type
                (name_access_chain
                  (identifier))))
            arguments: (arg_list
              (name_expression
                (name_access_chain
                  (identifier))))))))))

================================================================================
Receiver-style method call with type arguments
================================================================================

module 0x1::test {
    fun f(obj: Object) {
        obj.convert<TestToken, Metadata>();
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters
          (function_parameter
            name: (identifier)
            type: (apply_type
              (name_access_chain
                (identifier)))))
        body: (block
          (method_call_with_type_args
            (dot_expression
              object: (name_expression
                (name_access_chain
                  (identifier)))
              field: (identifier))
            type_arguments: (type_arguments
              (apply_type
                (name_access_chain
                  (identifier)))
              (apply_type
                (name_access_chain
                  (identifier))))
            arguments: (arg_list)))))))

================================================================================
Less-than comparison vs generic type arguments
================================================================================

module 0x1::test {
    fun f() {
        while (i < 10) {};
        assert!(x < 3, 42);
        exists<T>(addr);
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (while_expression
            condition: (binary_expression
              lhs: (name_expression
                (name_access_chain
                  (identifier)))
              rhs: (num_literal))
            body: (block))
          (macro_call_expression
            macro: (macro_identifier)
            arguments: (arg_list
              (binary_expression
                lhs: (name_expression
                  (name_access_chain
                    (identifier)))
                rhs: (num_literal))
              (num_literal)))
          (call_expression
            function: (name_access_chain
              (identifier))
            type_arguments: (type_arguments
              (apply_type
                (name_access_chain
                  (identifier))))
            arguments: (arg_list
              (name_expression
                (name_access_chain
                  (identifier))))))))))

================================================================================
Match on integer literal patterns (V2.4 — semantic gate only)
================================================================================

module 0x1::test {
    fun classify(n: u64): bool {
        match (n) {
            0 => false,
            _ => true,
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters
          (function_parameter
            name: (identifier)
            type: (primitive_type)))
        return_type: (primitive_type)
        body: (block
          (match_expression
            subject: (name_expression
              (name_access_chain
                (identifier)))
            (match_arm
              pattern: (num_literal)
              body: (bool_literal))
            (match_arm
              body: (bool_literal))))))))

================================================================================
assert! macro with format args (V2.4 — semantic gate only)
================================================================================

module 0x1::test {
    fun g(x: u64) {
        assert!(x > 0, b"value must be positive", x);
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters
          (function_parameter
            name: (identifier)
            type: (primitive_type)))
        body: (block
          (macro_call_expression
            macro: (macro_identifier)
            arguments: (arg_list
              (binary_expression
                lhs: (name_expression
                  (name_access_chain
                    (identifier)))
                rhs: (num_literal))
              (byte_string_literal)
              (name_expression
                (name_access_chain
                  (identifier))))))))))

================================================================================
assert_eq! and assert_ne! macros (V2.4 — semantic gate only)
================================================================================

module 0x1::test {
    fun g(x: u64) {
        assert_eq!(x, 1);
        assert_ne!(x, 0, b"x must not be zero");
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters
          (function_parameter
            name: (identifier)
            type: (primitive_type)))
        body: (block
          (macro_call_expression
            macro: (macro_identifier)
            arguments: (arg_list
              (name_expression
                (name_access_chain
                  (identifier)))
              (num_literal)))
          (macro_call_expression
            macro: (macro_identifier)
            arguments: (arg_list
              (name_expression
                (name_access_chain
                  (identifier)))
              (num_literal)
              (byte_string_literal))))))))

================================================================================
abort with byte string message (V2.4 — semantic gate only)
================================================================================

module 0x1::test {
    fun g() {
        abort b"oops";
    }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (module_identity
      address: (numerical_address)
      module: (identifier))
    body: (module_body
      (function_declaration
        name: (identifier)
        parameters: (function_parameters)
        body: (block
          (abort_expression
            (byte_string_literal)))))))
